home/static/css/style.css
/* ... */
.products .owl-nav,
.products .owl-dots {
  margin-top: 5px;
  text-align: center;
}

.products .owl-dot {
  display: inline-block;
  margin: 0 5px;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #fbe2d8 !important;
}

.products .owl-dot.active {
  background-color: #fdb417 !important;
}


.icon-frame i {
  font-size: 40px;
  color: #fdb417;
  /* Default color */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /* transition: color 0.6s ease; */
  /* Gradual transition for color change */
}

/* Default icon color and size */
.icon-frame .svg-icon {
  font-size: 40px;
  filter: saturate(100%) invert(83%) sepia(20%) saturate(5809%) hue-rotate(345deg) brightness(103%) contrast(101%);
  /* filter: invert(78%) sepia(98%) saturate(745%) hue-rotate(352deg) brightness(98%) contrast(102%); */
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /* transition: filter 0.6s ease; */
  /* Gradual transition for color change */
}

.icon-frame.lamb:hover .svg-icon {
  filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(101%) contrast(102%);
}



/* Adjust text */
.client-item p {
  margin-top: 10px;
  font-size: 14px;
  color: #333;
  font-weight: bold;
  position: relative;
  text-align: center;
}


/* Circle icon frame */
.icon-frame {
  display: inline-block;
  width: 80px;
  height: 80px;
  border-radius: 50%;
  background-color: transparent;
  position: relative;
  /* overflow: hidden; */
  margin: 0 auto;
  transition: background-color 0.5s ease;
}



/* Gradual color change on hover */
.icon-frame:hover i {
  color: #fff;
  /* width: 140px;
  height: 140px; */
}

/* Gradual solid fill on hover */
.icon-frame:hover::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #fdb417;
  border-radius: 50%;
  transform: scale(0);
  animation: fillEffect 0.5s forwards;
}

@keyframes fillEffect {
  0% {
    transform: scale(0);
  }

  100% {
    transform: scale(1);
  }
}

/* Specific icon styles based on the type */
.icon-frame:hover::before {
  animation-delay: 0.1s;
}


/* Adjust text */
.client-item p {
  margin-top: 10px;
  font-size: 14px;
  color: #333;
  font-weight: bold;
}

/* Button container */
.more-about-btn {
  text-align: center;
  margin-top: 40px;
}

/* Button styles */
.btn-more-about {
  display: inline-block;
  padding: 12px 30px;
  font-size: 16px;
  font-weight: bold;
  color: #fdb417;
  background-color: #fff;
  /* Same as icon color */
  border-radius: 30px;
  text-decoration: none;
  transition: all 0.3s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

/* Hover effect for the button */
.btn-more-about:hover {
  background-color: #fdb417;
  /* Change to white */
  color: #fff;
  /* Icon color */
  transform: translateY(-3px);
  /* Slightly lift the button on hover */
  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
  /* Slight shadow for lifted effect */
}

/*--------------------------------------------------------------
# Briefe section (6 boxes)
--------------------------------------------------------------*/
/* Hide Mobile View by Default */
.mobile-view-circles {
  display: none;
}

/* Container for the circles */
.stats-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  flex-wrap: wrap;
  z-index: 0;
  margin-bottom: 50px;
  gap: 30px;
  margin-left: -3px;
  margin-right: -300px;
}

/* For each circle */
.stats-box {
  position: absolute;
  width: 300px;
  /* Same size for all circles */
  height: 300px;
  /* Same size for all circles */
  font-size: 1.4rem;
  /* Adjust font size */
  font-weight: 600;
  color: #fdb417;
  background: none;
  border: 2px solid #fdb417;
  border-radius: 50%;
  /* Circle shape */
  cursor: default;
  /* overflow: hidden; */
  display: inline-flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s ease;
  z-index: 10;
  flex-wrap: wrap;
  /* Ensure it's above the other circles */
}

/* Hover effect for the circle */
.stats-box:hover {
  color: white;
}

.stats-box:hover p,
.stats-box:hover span {
  color: white;
}

/* Button style liquid effect */
.btn-border-reveal::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 0;
  top: 0;
  left: 0;
  background-color: #fdb417;
  transition: height 0.3s ease;
  z-index: -1;
}

.stats-box:hover::after {
  height: 100%;
}

/* Change text style */
.stats-box span {
  font-size: 3.0rem;
  font-weight: bold;
  margin-right: 0.0rem;
}

.margin-span {
  font-size: 0.2rem;
  font-weight: bold;
  margin-right: 36%;
  margin-left: 36%;
}

.stats-box p::before {
  content: '';
  display: block;
  height: 1rem;
  /* Adjust to create desired space */
}

/* .span-margin {
  font-size: 2.2rem;
  font-weight: bold;
  margin-right: 10%;
} */

.stats-box p {
  margin-top: -3.5rem;
  font-size: 1.3rem;
  text-align: center;
  margin-bottom: 0;
  color: inherit;
  display: block;
}

/* Position the circles so they slightly overlap each other */
.stats-box:nth-child(1) {
  top: 0;
  left: -200px;
}

.stats-box:nth-child(2) {
  top: 0px;
  /* Slightly inside */
  left: 50px;
  /* Slightly inside */
  /* z-index: 9; */
  /* Behind the first circle */
}

.stats-box:nth-child(3) {
  top: 0px;
  /* Slightly inside */
  left: 300px;
  /* Slightly inside */
  z-index: 8;
  /* Behind the second circle */
}

.stats-box:nth-child(4) {
  top: 0px;
  /* Slightly inside */
  left: 550px;
  /* Slightly inside */
  z-index: 7;
  /* Behind the third circle */
}

.stats-box:nth-child(5) {
  top: 0px;
  /* Slightly inside */
  left: 800px;
  /* Slightly inside */
  z-index: 6;
  /* Behind the fourth circle */
}

.stats-box:nth-child(6) {
  top: 0px;
  /* Slightly inside */
  /* Slightly inside */
  z-index: 5;
  /* Behind the fifth circle */
  right: -200px;
}
/* ... */

